flask.log
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:8000
 * Running on http://192.168.1.200:8000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 571-493-459
127.0.0.1 - - [03/Feb/2026 21:53:46] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [03/Feb/2026 21:53:46] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
127.0.0.1 - - [03/Feb/2026 22:00:04] "GET / HTTP/1.1" 200 -
 * Detected change in '/Users/manansanun/ml-project/app.py', reloading
 * Restarting with stat
  File "/Users/manansanun/ml-project/app.py", line 49
    diseases["โรคถุงลมโป่งพอง (Emphysema)"] = 0.8
    ^^^^^^^^
IndentationError: expected an indented block after 'if' statement on line 36
